--- a/InsuranceProject.ipynb
+++ b/InsuranceProject.ipynb
@@ -1,12 +1,73 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "194c3f7c",
+   "metadata": {},
+   "source": [
+    "##Import libraries and load in source data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "957f3423",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      age     sex     bmi  children smoker     region      charges\n",
+      "0      19  female  27.900         0    yes  southwest  16884.92400\n",
+      "1      18    male  33.770         1     no  southeast   1725.55230\n",
+      "2      28    male  33.000         3     no  southeast   4449.46200\n",
+      "3      33    male  22.705         0     no  northwest  21984.47061\n",
+      "4      32    male  28.880         0     no  northwest   3866.85520\n",
+      "...   ...     ...     ...       ...    ...        ...          ...\n",
+      "1333   50    male  30.970         3     no  northwest  10600.54830\n",
+      "1334   18  female  31.920         0     no  northeast   2205.98080\n",
+      "1335   18  female  36.850         0     no  southeast   1629.83350\n",
+      "1336   21  female  25.800         0     no  southwest   2007.94500\n",
+      "1337   61  female  29.070         0    yes  northwest  29141.36030\n",
+      "\n",
+      "[1338 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import pandas\n",
+    "\n",
+    "Insurance_info = pandas.read_csv(r'Data/insurance.csv')\n",
+    "\n",
+    "print(Insurance_info)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b387c00c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(Insurance_info)\n"
+   ]
   }
  ],
  "metadata": {
